--- a/res/layout/activity_add.xml
+++ b/res/layout/activity_add.xml
@@ -109,11 +109,34 @@
             android:inputType="number|numberDecimal" >
         </EditText>
     </TableRow>
+    
+    <TableRow
+        android:id="@+id/tableRow6"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:padding="5dip" >
 
+        <TextView
+            android:id="@+id/textView6"
+            android:text="Desc"
+            android:textAppearance="?android:attr/textAppearanceMedium" />
+
+        <EditText
+            android:id="@+id/txtDescription"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:ems="10"
+            android:inputType="number|numberDecimal" >
+        </EditText>
+    </TableRow>
+    
+    
+    
     <LinearLayout
         android:id="@+id/LinearLayout1"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="56dp"
+        android:baselineAligned="true"
         android:padding="5dip" >
 
         <Button
