--- a/res/layout/activity_add.xml
+++ b/res/layout/activity_add.xml
@@ -125,8 +125,8 @@
             android:id="@+id/txtDescription"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:ems="10"
-            android:inputType="number|numberDecimal" >
+            android:ems="10" >
+
         </EditText>
     </TableRow>
     
