--- a/res/layout/activity_update.xml
+++ b/res/layout/activity_update.xml
@@ -123,7 +123,10 @@
             android:id="@+id/txtDescription"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:ems="10" >
+            android:ems="10"
+            android:gravity="left"
+            android:lines="4"
+            android:maxLines="4" >
 
         </EditText>
     </TableRow>
