Created new DB for History
History now has its own Db. Fix Show all so it can be used.

--- a/res/layout/activity_history.xml
+++ b/res/layout/activity_history.xml
@@ -26,10 +26,10 @@
             android:padding="5dip" >
 
             <TextView
-                android:id="@+id/textView1"
+                android:id="@+id/ColDate"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Recent :"
+                android:text="History"
                 android:textAppearance="?android:attr/textAppearanceLarge" />
 
         </TableRow>
@@ -39,11 +39,11 @@
             android:layout_height="wrap_content" >
 
             <TextView
-                android:id="@+id/ColItemID"
+                android:id="@+id/ColDate"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:text="ItemID" />
+                android:text="Date" />
 
             <TextView
                 android:id="@+id/ColName"
