--- a/res/layout/activity_cart.xml
+++ b/res/layout/activity_cart.xml
@@ -17,7 +17,7 @@
             android:padding="5dip" >
 
             <TextView
-                android:id="@+id/textView1"
+                android:id="@+id/ColDate"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignBaseline="@+id/TotalPrice"
