--- a/res/layout/activity_historycolumn.xml
+++ b/res/layout/activity_historycolumn.xml
@@ -4,32 +4,31 @@
     android:layout_height="fill_parent"
     android:orientation="horizontal" >
 
-	<TextView
-	    android:id="@+id/ColItemID"
-	    android:layout_width="0dp"
-	    android:layout_height="wrap_content"
-	    android:layout_weight="1"
-	    android:text="ItemID" />
+    <TextView
+        android:id="@+id/ColDate"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_weight="0.36"
+        android:text=" Date" />
 
 	<TextView
-		android:id="@+id/ColName" 
-		android:layout_width="0dp"
-		android:layout_height="wrap_content" 
-		android:layout_weight="2"
-		android:text="Name"/>
+	    android:id="@+id/ColName"
+	    android:layout_width="0dp"
+	    android:layout_height="wrap_content"
+	    android:layout_weight="0.88"
+	    android:text="Name" />
 
 	<TextView
 	    android:id="@+id/ColQuantity"
-	    android:layout_width="0dp"
+	    android:layout_width="wrap_content"
 	    android:layout_height="wrap_content"
-	    android:layout_weight="1"
 	    android:text="Quantity" />
 
 	<TextView
 	    android:id="@+id/TotalPrice"
 	    android:layout_width="wrap_content"
 	    android:layout_height="wrap_content"
-	    android:layout_weight="0.89"
+	    android:layout_weight="0.20"
 	    android:text="Price"
 	    android:textAppearance="?android:attr/textAppearanceSmall" />
 
